  configuration version.

. Support tool-specific debug levels and added CIAO_DEBUG macros to
  simplify adding debug printouts based on various tool-specific debug
  levels.

. Add support for querying for interface types to the
  RepositoryManager.

. Implement a planner to query the TargetManager and RepositoryManager
  and generate deployment plans on the fly.

USER VISIBLE CHANGES BETWEEN CIAO-0.7.1 and CIAO-0.7.2
=======================================================

. CIDL compiler, and .cidl files, have been eliminated. All
  CIAO code generation is now handled by the TAO IDL compiler.
  See $TAO_ROOT/docs/compiler.html for details.

. DAnCE has been refactored in seperate libraries to reduce
  footprint and dependencies

. Logging has been improved

. IDL has been updated to match the official specifications

. CIAO now also compiles on HPUX

. Unicode improvements

. Updated Quoter tutorial for all recent changes including
  the latest CosMIC releases

. Use the new feature of the TAO_IDL compiler to generate all
  export files as part of the build step

. Extended CIAO and DAnCE tests

USER VISIBLE CHANGES BETWEEN CIAO-0.7.0 and CIAO-0.7.1
=======================================================

. No user visible changes in this release.

USER VISIBLE CHANGES BETWEEN CIAO-0.6.9 and CIAO-0.7.0
=======================================================

.  CIDLC compiler has new command line options:  --suppress-lem which will suppress
   generation of the local executor mapping, --suppress-svnt which will suppress
   generation of the servant code, --lem-enclosing-module which will generate the
   local executor mapping inside a given module.

USER VISIBLE CHANGES BETWEEN CIAO-0.6.8 and CIAO-0.6.9
======================================================

.  The CIAO refactoring branch has been merged to the main line of
   development.  This version of CIAO contains extensive refactoring of