@@ -1,4 +1,4 @@
-This is CIAO version 0.7.1, released Mon Jul 13 12:32:13 CDT 2009
+This is CIAO version 0.7.2, released Thu Jul 23 02:11:02 CDT 2009
 
 If you have any problems with or questions about CIAO, please send
 e-mail to the CIAO mailing list (ciao-users@cs.wustl.edu), using the
