@@ -1,0 +1,136 @@
+// $Id$
+// This file is generated with "generate_component_mpc.pl -p IhC_Foo IhC_Bar"
+
+project(IhC_Foo_IhC_Bar_idl_gen) : componentidldefaults   {
+  custom_only = 1
+  requires += dummy_label
+  idlflags += -Wb,stub_export_macro=IHC_BAR_STUB_Export \
+              -Wb,stub_export_include=IhC_Bar_stub_export.h \
+              -Wb,skel_export_macro=IHC_BAR_SVNT_Export \
+              -Wb,skel_export_include=IhC_Bar_svnt_export.h \
+              -Wb,exec_export_macro=IHC_BAR_EXEC_Export \
+              -Wb,exec_export_include=IhC_Bar_exec_export.h
+
+  IDL_Files {
+    IhC_Bar.idl
+  }
+}
+
+project(IhC_Foo_IhC_Bar_lem_gen) : ciaoidldefaults   {
+  after += IhC_Foo_IhC_Bar_idl_gen
+  requires += dummy_label
+  custom_only = 1
+  idlflags += -Wb,stub_export_macro=IHC_BAR_LEM_STUB_Export \
+              -Wb,stub_export_include=IhC_Bar_lem_stub_export.h \
+              -SS -Gxhst
+
+  IDL_Files {
+    IhC_BarE.idl
+  }
+}
+
+project(IhC_Foo_IhC_Bar_lem_stub) : ccm_svnt   {
+  after += IhC_Foo_IhC_Bar_lem_gen IhC_Foo_IhC_Bar_stub IhC_Foo_stub
+  libs  += IhC_Foo_stub IhC_Bar_stub
+  requires += dummy_label
+  
+  sharedname = IhC_Bar_lem_stub
+  dynamicflags   = IHC_BAR_LEM_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_BarEC.cpp
+  }
+
+  Header_Files {
+    IhC_BarEC.h
+    IhC_Bar_lem_stub_export.h
+  }
+
+  Inline_Files {
+    IhC_BarEC.inl
+  }
+}
+
+project(IhC_Foo_IhC_Bar_stub) : ccm_stub   {
+  after += IhC_Foo_IhC_Bar_idl_gen IhC_Foo_stub
+  libs  += IhC_Foo_stub
+  requires += dummy_label  
+  
+  sharedname = IhC_Bar_stub
+  dynamicflags   = IHC_BAR_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_BarC.cpp
+  }
+
+  Header_Files {
+    IhC_BarC.h
+    IhC_Bar_stub_export.h
+  }
+
+  Inline_Files {
+    IhC_BarC.inl
+  }
+}
+
+project(IhC_Foo_IhC_Bar_exec) : ciao_executor   {
+  after   += IhC_Foo_IhC_Bar_lem_stub IhC_Foo_IhC_Bar_stub
+  sharedname = IhC_Bar_exec
+  libs += IhC_Bar_stub IhC_Bar_lem_stub IhC_Foo_stub
+  requires += dummy_label  
+  
+  dynamicflags   = IHC_BAR_EXEC_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_Bar_exec.cpp
+  }
+
+  Header_Files {
+    IhC_Bar_exec.h
+    IhC_Bar_exec_export.h
+  }
+
+  Inline_Files {
+  }
+}
+
+
+project(IhC_Foo_IhC_Bar_svnt) : ciao_servant   {
+  after      += IhC_Foo_skel  IhC_Foo_IhC_Bar_lem_stub
+  sharedname  = IhC_Bar_svnt
+  libs       += IhC_Bar_stub IhC_Bar_lem_stub  \
+                IhC_Foo_skel \
+                IhC_Foo_stub
+  requires += dummy_label  
+  
+  dynamicflags = IHC_BAR_SVNT_BUILD_DLL
+  
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_BarS.cpp
+    IhC_Bar_svnt.cpp
+  }
+
+  Header_Files {
+    IhC_BarS.h
+    IhC_Bar_svnt.h
+    IhC_Bar_svnt_export.h
+  }
+
+  Inline_Files {
+    IhC_BarS.inl
+  }
+}
+
+
