@@ -1,0 +1,13 @@
+// $Id$
+
+#include <Components.idl>
+
+interface foo_intf
+{
+};
+
+
+component Foo
+{
+  provides foo_intf foo_port;
+};
