@@ -1,0 +1,132 @@
+// $Id$
+// This file is generated with "generate_component_mpc.pl IhC_Foo"
+
+project(IhC_Foo_idl_gen) : componentidldefaults   {
+  custom_only = 1
+  idlflags += -Wb,stub_export_macro=IHC_FOO_STUB_Export \
+              -Wb,stub_export_include=IhC_Foo_stub_export.h \
+              -Wb,skel_export_macro=IHC_FOO_SVNT_Export \
+              -Wb,skel_export_include=IhC_Foo_svnt_export.h \
+              -Wb,exec_export_macro=IHC_FOO_EXEC_Export \
+              -Wb,exec_export_include=IhC_Foo_exec_export.h -Gex
+
+  IDL_Files {
+    IhC_Foo.idl
+  }
+}
+
+project(IhC_Foo_lem_gen) : ciaoidldefaults   {
+  after += IhC_Foo_idl_gen
+  custom_only = 1
+  idlflags += -Wb,stub_export_macro=IHC_FOO_LEM_STUB_Export \
+              -Wb,stub_export_include=IhC_Foo_lem_stub_export.h \
+              -SS -Gxhst
+
+  IDL_Files {
+    IhC_FooE.idl
+  }
+}
+
+project(IhC_Foo_lem_stub) : ccm_svnt   {
+  after += IhC_Foo_lem_gen IhC_Foo_stub 
+  libs  +=  IhC_Foo_stub
+  
+  
+  sharedname = IhC_Foo_lem_stub
+  dynamicflags   = IHC_FOO_LEM_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_FooEC.cpp
+  }
+
+  Header_Files {
+    IhC_FooEC.h
+    IhC_Foo_lem_stub_export.h
+  }
+
+  Inline_Files {
+    IhC_FooEC.inl
+  }
+}
+
+project(IhC_Foo_stub) : ccm_stub   {
+  after += IhC_Foo_idl_gen 
+  libs  += 
+  
+  
+  sharedname = IhC_Foo_stub
+  dynamicflags   = IHC_FOO_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_FooC.cpp
+  }
+
+  Header_Files {
+    IhC_FooC.h
+    IhC_Foo_stub_export.h
+  }
+
+  Inline_Files {
+    IhC_FooC.inl
+  }
+}
+
+project(IhC_Foo_exec) : ciao_executor   {
+  after   += IhC_Foo_lem_stub IhC_Foo_stub
+  sharedname = IhC_Foo_exec
+  libs += IhC_Foo_stub IhC_Foo_lem_stub 
+  
+  
+  dynamicflags   = IHC_FOO_EXEC_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_Foo_exec.cpp
+  }
+
+  Header_Files {
+    IhC_Foo_exec.h
+    IhC_Foo_exec_export.h
+  }
+
+  Inline_Files {
+  }
+}
+
+
+project(IhC_Foo_svnt) : ciao_servant   {
+  after      +=   IhC_Foo_lem_stub
+  sharedname  = IhC_Foo_svnt
+  libs       += IhC_Foo_stub IhC_Foo_lem_stub  
+  
+  
+  dynamicflags = IHC_FOO_SVNT_BUILD_DLL
+  
+  IDL_Files {
+  }
+
+  Source_Files {
+    IhC_FooS.cpp
+    IhC_Foo_svnt.cpp
+  }
+
+  Header_Files {
+    IhC_FooS.h
+    IhC_Foo_svnt.h
+    IhC_Foo_svnt_export.h
+  }
+
+  Inline_Files {
+    IhC_FooS.inl
+  }
+}
+
+
