@@ -1,0 +1,14 @@
+// $Id$
+
+#include <Components.idl>
+#include "tao/StringSeq.pidl"
+
+interface foo_intf
+{
+  typedef sequence<string> MyStringSeq;
+};
+
+component Foo
+{
+  provides foo_intf foo_port;
+};
