@@ -1,0 +1,139 @@
+// $Id$
+// This file is generated with "generate_component_mpc.pl PIDLInclude"
+
+project(PIDLInclude_idl_gen) : componentidldefaults   {
+  requires += dummy_label
+  custom_only = 1
+  idlflags += -Wb,stub_export_macro=PIDLINCLUDE_STUB_Export \
+              -Wb,stub_export_include=PIDLInclude_stub_export.h \
+              -Wb,skel_export_macro=PIDLINCLUDE_SVNT_Export \
+              -Wb,skel_export_include=PIDLInclude_svnt_export.h \
+              -Wb,exec_export_macro=PIDLINCLUDE_EXEC_Export \
+              -Wb,exec_export_include=PIDLInclude_exec_export.h
+
+  IDL_Files {
+    idlflags += -Glem -Glfa
+    PIDLInclude.idl
+  }
+}
+
+project(PIDLInclude_lem_gen) : ciaoidldefaults   {
+  requires += dummy_label
+  after += PIDLInclude_idl_gen
+  custom_only = 1
+  idlflags += -Wb,stub_export_macro=PIDLINCLUDE_LEM_STUB_Export \
+              -Wb,stub_export_include=PIDLInclude_lem_stub_export.h \
+              -SS -Gxhst
+
+  IDL_Files {
+    PIDLIncludeE.idl
+  }
+}
+
+project(PIDLInclude_lem_stub) : ccm_svnt   {
+  requires += dummy_label
+  after += PIDLInclude_lem_gen PIDLInclude_stub
+  libs  +=  PIDLInclude_stub
+
+
+  sharedname = PIDLInclude_lem_stub
+  dynamicflags   = PIDLINCLUDE_LEM_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    PIDLIncludeEC.cpp
+  }
+
+  Header_Files {
+    PIDLIncludeEC.h
+    PIDLInclude_lem_stub_export.h
+  }
+
+  Inline_Files {
+    PIDLIncludeEC.inl
+  }
+}
+
+project(PIDLInclude_stub) : ccm_stub   {
+  requires += dummy_label
+  after += PIDLInclude_idl_gen
+  libs  +=
+
+
+  sharedname = PIDLInclude_stub
+  dynamicflags   = PIDLINCLUDE_STUB_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    PIDLIncludeC.cpp
+  }
+
+  Header_Files {
+    PIDLIncludeC.h
+    PIDLInclude_stub_export.h
+  }
+
+  Inline_Files {
+    PIDLIncludeC.inl
+  }
+}
+
+project(PIDLInclude_exec) : ciao_executor   {
+  requires += dummy_label
+  after   += PIDLInclude_lem_stub PIDLInclude_stub
+  sharedname = PIDLInclude_exec
+  libs += PIDLInclude_stub PIDLInclude_lem_stub
+
+
+  dynamicflags   = PIDLINCLUDE_EXEC_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    PIDLInclude_exec.cpp
+  }
+
+  Header_Files {
+    PIDLInclude_exec.h
+    PIDLInclude_exec_export.h
+  }
+
+  Inline_Files {
+  }
+}
+
+
+project(PIDLInclude_svnt) : ciao_servant   {
+  requires += dummy_label
+  after      +=   PIDLInclude_lem_stub
+  sharedname  = PIDLInclude_svnt
+  libs       += PIDLInclude_stub PIDLInclude_lem_stub
+
+
+  dynamicflags = PIDLINCLUDE_SVNT_BUILD_DLL
+
+  IDL_Files {
+  }
+
+  Source_Files {
+    PIDLIncludeS.cpp
+    PIDLInclude_svnt.cpp
+  }
+
+  Header_Files {
+    PIDLIncludeS.h
+    PIDLInclude_svnt.h
+    PIDLInclude_svnt_export.h
+  }
+
+  Inline_Files {
+    PIDLIncludeS.inl
+  }
+}
+
+
